<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/Heading"
        android:textColor="#000000" />
    
    <View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@android:color/black" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/First"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp"
            android:text="@string/Second"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="30dp"
            android:text="@string/Third"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="30dp"
            android:text="@string/Fourth"
            android:textColor="#000000" />

    </RelativeLayout>
    
    <Button
        android:id="@+id/Instructionsback"
        android:layout_width="84dp"
        android:layout_height="34dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="Back"
        android:textColor="#000000"
        android:textSize="15dp" />
    
</LinearLayout>